# mos-fp

./: CMakeLists.txt  README.md  mulsf3.s  outline.md
.github/workflows/: ci.yml
docs/design/: design.md  pack_unpack.md  type_selection.md
include/opine/: opine.hpp
include/opine/core/: format.hpp  prefix.hpp  types.hpp  unpacked.hpp
include/opine/operations/: pack_unpack.hpp
include/opine/policies/: denormal.hpp  rounding.hpp  type_selection.hpp
tests/: CMakeLists.txt
tests/helpers/: test_float_oracle.hpp
tests/unit/: test_pack_unpack.cpp  test_rounding_logic.cpp  test_rounding_oracle.cpp  test_type_selection.cpp
